--- a/src/pages/Members/Members.module.css
+++ b/src/pages/Members/Members.module.css
@@ -95,7 +95,7 @@ body{margin:0}
 }
 
 .contact{display:flex;flex-direction:column;gap:12px;}
-.contact-item{display:flex;align-items:center;gap:10px;opacity:.95}
+.contact-item{display:flex;align-items:center;gap:10px;opacity:.95;font-size: 24px}
 .contact-item a, .contact-item span{color:var(--fg);text-decoration:none}
 .contact-item a:hover{text-decoration:underline}
 
@@ -103,11 +103,12 @@ body{margin:0}
 .name{font-size: clamp(40px, 6vw, 72px);line-height:1.05;margin:0 0 8px}
 .subtitle{
   color:var(--gold);
-  font-weight:700;
   margin:0 0 8px;
   letter-spacing:.2px;
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 26px
 }
-.affil{color:var(--gold);margin:0 0 28px;font-weight:700}
+.affil{color:var(--gold);margin:0 0 28px;font-family: "Roboto Condensed", sans-serif;  font-size: 26px;}
 .motto{font-size: clamp(26px, 4vw, 48px);margin: 0 0 48px;font-weight:800}
 
 .cta-row{display:flex;align-items:center;gap:18px;position:relative;height: fit-content;}
