--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,6 +1,6 @@
 .footer {
     background-color: #0E133F;
-    padding: 8rem 10rem;
+    padding: 4rem 10rem;
     min-height: 100%;
     display: flex;
     flex-direction: column;
@@ -104,7 +104,7 @@
 
 /* Section 2 */
 .section2{
-    margin-bottom: 8rem;
+    margin-bottom: auto;
 }
 
 
