--- a/src/pages/Homepage/Homepage.module.css
+++ b/src/pages/Homepage/Homepage.module.css
@@ -8,7 +8,8 @@
 .mr-container { 
   position: relative; 
   margin: 0 auto; 
-  padding-top: 70px;
+  padding-top: 50px;
+  padding-bottom: 100px;
   max-width: 2000px;
 }
 
