--- a/src/pages/Projects/Projects.module.css
+++ b/src/pages/Projects/Projects.module.css
@@ -87,3 +87,28 @@
     font-size:1.2rem;
     text-align: center;
 }
+
+.tag{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.switch_page{
+    background-color: #364dfa;
+    color: #ffc23a;
+    padding: 1rem;
+    text-align:right;
+    font-size: 1.92rem;
+    border-radius: 12px;
+    display: inline-block;
+    margin-left: auto;
+}
+.switch_page:hover{
+    cursor: pointer;
+}
+
+.space{
+    width: 100%;
+    margin-bottom: 25px;
+
+}
