fixing member data (not done)-1

--- a/src/pages/Members/Members.module.css
+++ b/src/pages/Members/Members.module.css
@@ -120,7 +120,7 @@ body{margin:0}
   padding: 60px 20px;
   text-align: center;
   color: var(--fg);
-  height: 100vh;
+  height: fit-content;
 }
 
 .members-section h2 {
