--- a/src/pages/Projects/Projects.module.css
+++ b/src/pages/Projects/Projects.module.css
@@ -28,9 +28,15 @@
 
 }
 
-@media (max-width: 768px) {
+@media (max-width: 835px) {
  .title{
   font-size: 4rem;
+ }
+} 
+
+@media (max-width: 430px) {
+ .title{
+  font-size: 3rem;
  }
 } 
 
