--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,6 +1,6 @@
 .footer {
     background-color: #0E133F;
-    padding: 4rem 10rem;
+    padding: 10vh 12vw;
     min-height: 100%;
     display: flex;
     flex-direction: column;
@@ -9,23 +9,17 @@
     --margin-between-two-info-columns-R: 5%;
 }
 
-@media (max-width: 950px){
-    .footer{
-        padding: 5rem 7rem;
-    }
-}
-
-@media (max-width: 720px){
-    .footer{
-        padding: 5rem 3rem;
-    }
-    
-}
 
 .heading {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     color: #FFC23A;
     margin-bottom: 0.2rem;
+}
+@media (max-width: 420px)
+{
+    .heading {
+        font-size: 1.2rem;
+    }
 }
 
 .hr {
@@ -52,9 +46,6 @@
     margin-bottom: 2rem;
 }
 
-.slogan{
-    max-width: 29rem;
-}
 
 @media (max-width: 800px){
 
@@ -77,30 +68,34 @@
     color: #B1B3BD;
     width:auto;
     height: auto;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
+    max-width: 29rem;
 }
 
-@media (max-width: 720px)
+@media (max-width: 420px)
 {
     .p{
-        font-size: 1.2em;
+        font-size: 1em;
     }
 }
 
 /* link */
 .li {
-    font-size: 1.5em;
+    font-size: 1.4em;
     color: #ffffff;
     text-decoration-line: underline;
     text-underline-offset: 4px;
     margin: 0.6rem 0px;
 }
 
-@media (max-width: 720px){
-    .li{
-        font-size: 1.5rem;
+@media (max-width: 420px)
+{
+    .li {
+        font-size: 1.2rem;
     }
 }
+
+
 
 /* Section 2 */
 .section2{
@@ -126,6 +121,13 @@
     margin: 1.2rem 0px;
     font-size: 1.2rem;
     align-items: center;
+}
+
+@media (max-width: 420px)
+{
+    .info {
+        font-size: 1rem;
+    }
 }
 
 
@@ -159,7 +161,7 @@
     }
 }
 
-@media(max-width: 400px){
+@media(max-width: 420px){
     .info{
         flex-wrap: wrap;
     }
@@ -172,15 +174,19 @@
 
 .icon{
     width: 2.5rem;
-    min-width: 2.5rem;
-    max-width: 2.5rem;
-    
     height: 2.5rem;
-    min-height: 2.5rem;
-    max-height: 2.5rem;
     /* color of icon (otherwise they inherite from <button>) */
     color: #CDD3FE;
 }
+
+@media (max-width: 420px)
+{
+    .icon{
+        width: 2rem;
+        height: 2rem;
+    }
+}
+
 
 
 /* Section 3 */
@@ -190,8 +196,16 @@
     display:flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin-top: auto;
+    margin-top: 30px;
 }
+@media (max-width: 420px)
+{
+    .fine{
+        font-size: 0.6rem;
+    }
+}
+
+
 
 .credit{
     text-decoration: underline;
