--- a/src/pages/News/News.module.css
+++ b/src/pages/News/News.module.css
@@ -1,5 +1,5 @@
 .marginLR {
-  margin: 0px 6rem;
+  margin: 0px 8rem;
 }
 
 @media (max-width: 1024px) {
@@ -16,14 +16,14 @@
 
 .title {
     color: #364DFA;
-    font-size:5rem;
+    font-size:4.5rem;
     text-align: center;
     padding: 1.2rem 0px;
 }
 
 @media (max-width: 768px) {
  .title{
-  font-size: 4rem;
+  font-size: 3.5rem;
  }
 } 
 
@@ -35,15 +35,12 @@
 
 .shelf{
     display: grid;
-    padding: 1.2rem;
     grid-template-columns: repeat(3, minmax(0, 1fr));
     grid-auto-rows: minmax(20rem, auto);
-    gap: 4rem;
+    gap: 6vw;
     justify-content: center;
     align-items: start;
-
 }
-
 
 .piece > div{
     margin: 0.5rem 0px;
@@ -63,6 +60,7 @@
   align-items: center;
   justify-content: center;
   border-radius: 12px;
+  cursor: pointer;
 }
 .img43 img {
   width: 100%;
