--- a/src/pages/Projects/Projects.module.css
+++ b/src/pages/Projects/Projects.module.css
@@ -22,7 +22,8 @@
 
 
 .title {
-    font-size:5rem;
+    color: #ffffff;
+    font-size:4.5rem;
     text-align: center;
     padding: 1.2rem 0px;
 
@@ -30,7 +31,7 @@
 
 @media (max-width: 835px) {
  .title{
-  font-size: 4rem;
+  font-size: 3.5rem;
  }
 } 
 
@@ -41,7 +42,7 @@
 } 
 
 .subtitle {
-    font-size:1.4rem;
+    font-size:1.2rem;
     text-align: center;
     padding: 1.2rem 0px;
 }
@@ -51,7 +52,7 @@
     padding: 4.8rem 0px;
     grid-template-columns: repeat(3, minmax(0, 1fr));
     grid-auto-rows: minmax(20rem, auto);
-    gap: 4rem;
+    gap: 6vw;
     justify-content: center;
     align-items: start;
 }
