--- a/src/pages/News/News.module.css
+++ b/src/pages/News/News.module.css
@@ -4,11 +4,11 @@
 
 @media (max-width: 1024px) {
  .marginLR{
-  margin: 0px 4.5rem;
+  margin: 0px 6rem;
  }
 } 
 
-@media (max-width: 768px) {
+@media (max-width: 430px) {
  .marginLR{
   margin: 0px 3rem;
  }
@@ -37,7 +37,7 @@
     display: grid;
     grid-template-columns: repeat(3, minmax(0, 1fr));
     grid-auto-rows: minmax(20rem, auto);
-    gap: 6vw;
+    gap: 6vh 4vw;
     justify-content: center;
     align-items: start;
 }
@@ -74,8 +74,9 @@
     color:#9BA6FD;
 }
 
+
 .headline{
-    font-size:1.92rem;
+    font-size:1.8rem;
     color: #364DFA;
     hyphens: auto;
 }
@@ -90,21 +91,43 @@
     color: #FFC23A;
     margin-top: 2rem;
     text-align:right;
-    font-size: 1.92rem;
+    font-size:1.8rem;
 }
 .switch_page:hover{
     cursor: pointer;
 }
-
 
 .news_nav_bar{
     display: flex;
     flex-wrap: wrap;
     margin: 2rem 0px;
     gap: 0px 2rem;
-    font-size: 1.92rem;
+    font-size: 1.8rem;
     justify-content:center;
     text-align: center;;
+}
+
+/* font-size setting */
+@media (max-width: 420px)
+{
+    .date {
+        font-size:1rem;
+    }
+    .headline{
+        font-size:1.4rem;
+    }
+    .content{
+        font-size:1rem;
+    }
+
+    .switch_page{
+
+        font-size: 1.4rem;
+    }
+    .news_nav_bar{
+
+        font-size: 1.4rem;
+    }
 }
 
 @media(max-width: 800px){
